--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.10'
         # Устанавливаем зависемости
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r req.txt
         # Запускаем тесты
       - name: Run tests
         run: print("Hello World")
