--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,35 +7,35 @@ on:
 # Перечисление списка задач в данном workflow
 jobs:
   # Задача тестирования
-  test:
-    # Название задачи
-    name: Test code
-    # Тип ВМ, на которой будет запущена задача
-    runs-on: ubuntu-latest
-    # Шаги выполняемые в рамках задачи
-    steps:
-        # Получаем код репозитория
-      - name: Get code from repo
-        uses: actions/checkout@v3
-        # Устанавливаем python3.10
-      - name: Set-up python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-        # Устанавливаем зависемости
-      - name: Install dependencies
-        run: pip install -r req.txt
-        # Запускаем тесты
-      - name: Run tests
-        run: print("Hello World")
-        # Для успешного запуска тестов необходимо в переменную окружения DATABASE_URL записать корректную строку подключения к любой БД
-        env:
-          DATABASE_URL: sqlite:///./sqlite.db
-  # Задача развертывания
+#   test:
+#     # Название задачи
+#     name: Test code
+#     # Тип ВМ, на которой будет запущена задача
+#     runs-on: ubuntu-latest
+#     # Шаги выполняемые в рамках задачи
+#     steps:
+#         # Получаем код репозитория
+#       - name: Get code from repo
+#         uses: actions/checkout@v3
+#         # Устанавливаем python3.10
+#       - name: Set-up python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.10'
+#         # Устанавливаем зависемости
+#       - name: Install dependencies
+#         run: pip install -r req.txt
+#         # Запускаем тесты
+#       - name: Run tests
+#         run: print("Hello World")
+#         # Для успешного запуска тестов необходимо в переменную окружения DATABASE_URL записать корректную строку подключения к любой БД
+#         env:
+#           DATABASE_URL: sqlite:///./sqlite.db
+#   # Задача развертывания
   deploy:
     name: Deploy to server
     runs-on: ubuntu-latest
-    needs: [test]
+#     needs: [test]
     steps:
       - name: Get code from repo
         uses: actions/checkout@v3
