--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,10 +70,10 @@ jobs:
         run: rsync -rav .env yandex_server:~/project/.env
         # Останавливаем контейнеры на сервере
       - name: Stop containers
-        run: ssh yandex_server 'sudo docker-compose -f project/docker-compose.yml down'
+        run: ssh yandex_server 'sudo docker-compose -S -f project/docker-compose.yml down'
         # Собираем контейнеры
       - name: Build containers
-        run: ssh yandex_server 'sudo docker-compose -f project/docker-compose.yml build'
+        run: ssh yandex_server 'sudo docker-compose -S -f project/docker-compose.yml build'
         # Запускаем контейнеры
       - name: Run containers
-        run: ssh yandex_server 'sudo docker-compose -f project/docker-compose.yml up -d'
+        run: ssh yandex_server 'sudo docker-compose -S -f project/docker-compose.yml up -d'
