--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # Определяем версию схемы файла, опциональный параметр
-version: "3.10"
+version: '3.3'
 # Определяем список сервисов — services
 # Эти сервисы будут частью нашего приложения
 services:
